--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ GOOGLE_CLIENT_ID = 107437435040-ehjueh37umc3eeoo1t1acrfqe9drc4ep.apps.googleuser
 # MONGODB CONFIG
 MONGODB_URI = mongodb+srv://sumitkumar:sumitkumar@prompt-ai-webapp.vqv5ian.mongodb.net/?retryWrites=true&w=majority
 
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL = http://localhost:3000
 NEXTAUTH_SECRET = AKaHBi13erRs64KvvttWWsB3cQyVt7m23EgUIWePTYk=
